[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synnax-shared"
version = "1.2.0"
description = "Synnax shared Python pacakges"
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
events = ["boto3", "boto3-stubs[sns]"]
http-client = ["requests", "types-requests", "retry", "types-retry"]
system-token-issuer = ["boto3", "boto3-stubs[lambda]", "PyJWT"]
dev = ["mypy", "black"]
all = ["synnax-shared[events,http-client,system-token-issuer,dev]"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
